# flutterfly_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  main_cron.py
app/app/api/api_login/logins/: apple_login.py  github_login.py  google_login.py  login_user_origin.py  reddit_login.py
app/app/api/api_v1/: __init__.py
app/app/api/api_v1/email/: remove_account.py  reset_password.py  update_password.py  verify_email.py
app/app/api/api_v1/flutterfly/: __init__.py  get_score.py  update_score.py
app/app/api/api_v1/leaderboard/: __init__.py  get_leaderboard_one_player.py  get_leaderboard_two_players.py  update_leaderboard_one_player.py  update_leaderboard_two_players.py
app/app/config/: config.py
app/app/models/: __init__.py  leaderboard_one_player.py  leaderboard_two_player.py  user.py
app/app/sockets/: sockets.py
app/app/util/: util.py
app/app/util/email/: delete_account_email.py
app/migrations/versions/: 23d4d4aa2f43_adding_achievements_to_user.py  3292f556e594_add_all_tables.py  37ce7de0d21d_adding_double_bird_highscore.py  5e102dabccfd_changed_email_to_hash.py  74605c6ddf01_registration_login_and_messaging.py  97701ad9c4f8_adding_leaderboard.py  9d7088dcfee1_platform_achievement_tracking.py  a2c455270da0_adding_user_scores.py  d3ffe081e45a_bird_to_butterfly.py  e69925457e1f_remove_foreign_key_reference_on_.py
kubernetes/kubernetes_local/initial/: 2_fastapi_secret.yaml  3_redis.yaml  4_postgres.yaml
kubernetes/kubernetes_local/second/: 5_fastapi.yaml  6_worker.yaml  7_cron_worker.yaml
(+26 files in other folders)
