[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["app/migrations/env.py"]

[tool.poetry]
name = "flutterfly"
version = "0.1.0"
description = "Flutter Fly is the greatest tap game in the last few months"
authors = ["Grabot"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "0.103.1"
uvicorn = "0.23.2"
python-dotenv = "1.0.0"
psycopg2-binary = "2.9.9"
sqlmodel = "0.0.8"
alembic = "1.12.0"
asyncpg = "0.29.0"
passlib = "1.7.4"
authlib = "1.2.1"
oauthlib = "3.2.2"
python-socketio = "5.9.0"
websockets = "11.0.3"
asyncio-redis = "0.16.0"
redis = "5.0.0"
pillow = "10.0.1"
fastapi-pagination = "0.12.9"
fastapi-mail = "1.3.1"
celery = "5.3.4"
APScheduler = "3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
